# snake_pixels

./: Cargo.toml  README.md  index.html
snake_game/: Cargo.toml
snake_game/src/: input.rs  lib.rs  player.rs  render.rs  shapes.rs
src/: main.rs
