[package]
name = "snake_pixels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
optimize = ["log/release_max_level_warn"]
web = ["wgpu/webgl"]
default = ["optimize"]

[dependencies]
log = "0.4"
pixels = "0.9.0"
wgpu = "0.12"
winit = "0.26"
winit_input_helper = "0.11"
snake_game = { path = "snake_game" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
instant = { version="0.1", features= ["stdweb"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.9"
pollster = "0.2"
instant = "0.1"
